--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
 body {
     background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
     background-repeat: no-repeat;
+    background-image: url("bg4.jpg");
+    background-size: cover;
     min-height: 100vh;
 
 }
@@ -52,7 +54,7 @@ nav ul li a {
 .btn-container {
     justify-content: center;
     margin: auto;
-    background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+    /* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
     display: flex;
     padding: 2rem;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
